test/nashorn/script/basic/JDK-8026701.js.EXPECTED
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2,-3,4,5,6,7,8,9,10
3,-1,-2
1,2,-3,4,5,6,7,8,9,10
-3,4,5
1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2,-3,4,5,6,7,8,9,10
3,-1,-2
1,2,-3,4,5,6,7,8,9,10
-3,4,5
1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2,-3,4,5,6,7,8,9,10
3,-1,-2
1,2,-3,4,5,6,7,8,9,10
-3,4,5
1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2,-3,4,5,6,7,8,9,10
3,-1,-2
1,2,-3,4,5,6,7,8,9,10
-3,4,5
1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2,-3,4,5,6,7,8,9,10
3,-1,-2
1,2,-3,4,5,6,7,8,9,10
-3,4,5
1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2.5,-3.5,4,5,6,7,8,9,10
3,-1,-2.5
1,2,-3.5,4,5,6,7,8,9,10
-3.5,4,5
1,2,-3.5,4,5,6,7,8,9,10

1,2,-3.5,4,5,6,7,8,9,10

1,2,-3.5,4,5,6,7,8,9,10,-1,-2.5,-3.5
1,2
1,2,-3.5,4,-3.5,4,5,6,7,8,9,10,-1,-2.5,-3.5
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2,-3,4,5,6,7,8,9,10
3,-1,-2
1,2,-3,4,5,6,7,8,9,10
-3,4,5
1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2.5,-3.5,4,5,6,7,8,9,10
3,-1,-2.5
1,2,-3.5,4,5,6,7,8,9,10
-3.5,4,5
1,2,-3.5,4,5,6,7,8,9,10

1,2,-3.5,4,5,6,7,8,9,10

1,2,-3.5,4,5,6,7,8,9,10,-1,-2.5,-3.5
1,2
1,2,-3.5,4,-3.5,4,5,6,7,8,9,10,-1,-2.5,-3.5
1,2,3,4,5,6,7,8,9,10

1,2,3,-1,-2,-3,4,5,6,7,8,9,10
3,-1,-2
1,2,-3,4,5,6,7,8,9,10
-3,4,5
1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10

1,2,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,6,7,8,9,10,-1,-2,-3
1,2,3,4,5,13,7,8,9,10

1,2,3,-1,-2,-3,4,5,13,7,8,9,10
3,-1,-2
1,2,-3,4,5,13,7,8,9,10
-3,4,5
1,2,-3,4,5,13,7,8,9,10

1,2,-3,4,5,13,7,8,9,10

1,2,-3,4,5,13,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,13,7,8,9,10,-1,-2,-3
1,2,3,4,5,13,7,8,9,10
TypeError: "5" is not a writable property of [object Array]
1,2,3,4,5,13,7,8,9,10

1,2,3,-1,-2,-3,4,5,13,7,8,9,10
3,-1,-2
1,2,-3,4,5,13,7,8,9,10
-3,4,5
1,2,-3,4,5,13,7,8,9,10

1,2,-3,4,5,13,7,8,9,10

1,2,-3,4,5,13,7,8,9,10,-1,-2,-3
1,2
1,2,-3,4,-3,4,5,13,7,8,9,10,-1,-2,-3
1,2,3,4,5,13,7,8,9,10
TypeError: "5" is not a writable property of [object Array]
